--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,6 +24,8 @@ services:
   php:
     build:
       context: .
+      args:
+        - IMAGE_VERSION="8.1-debian-12"
       dockerfile: ./dockerfiles/php-fpm.dockerfile
     container_name: php-fpm
     volumes:
@@ -41,6 +43,9 @@ services:
     build:
       context: .
       dockerfile: ./dockerfiles/symfony.dockerfile
+      args:
+        - GIT_EMAIL="rossto3v@gmail.com"
+        - GIT_USERNAME="Rosen Stoev"
     container_name: symfonycli
     volumes:
       - ./app:/var/www/app
